Global wrap-break fix

--- a/styles/global.css
+++ b/styles/global.css
@@ -37,4 +37,5 @@ img {
     color: white;
     box-sizing: border-box;
     margin: 0;
+    overflow-wrap: anywhere;
 }
